--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,16 +66,21 @@
 }
 
 .circle {
-  width: 6px;
-  height: 6px;
-  border-radius: 100%;
+  position:  absolute;
+  width: 8px; 
+  height: 8px; 
+  border-radius: 50%; 
+  background-color: transparent; 
+  border: 2px solid #5D5AFF; 
+  transition: background-color 0.3s; 
+  display: none;
+  top: 32px; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+a:hover .circle {
   background-color: #5D5AFF; 
-  position: absolute;
-  top: 28px;
-  left:45%; 
-
-  opacity: 0;
-  transition: opacity 0.6s ease;
+  display: block;
 }
 
 .relative.active .circle {
@@ -111,9 +116,17 @@
 
   }
 }
+@media only screen and (min-width : 1390px) {
+  .blue-hero {
+    width: 92%;
+    margin: auto 0;
+    margin-right: 0;
+
+  }
+}
 @media only screen and (min-width : 1500px) {
   .blue-hero {
-    width: 100%;
+    width: 99%;
     margin: auto 0;
     margin-right: 0;
 
