--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,78 +1,175 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Jomhuria&family=Mirza:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Jomhuria&family=Mirza:wght@400;500;600;700&family=Noto+Kufi+Arabic:wght@100..900&family=Noto+Sans+Arabic:wght@100..900&display=swap');
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 0 0% 100%;
-      --foreground: 0 0% 3.9%;
+.text-gradient {
+  background: linear-gradient(90deg, rgb(186, 185, 185), #747373 , #7d7d7d , #606060 , #ffffff , #787878 , #878787 , #808080 , rgb(136, 136, 136));
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient-animation 15s linear infinite;
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+  font-optical-sizing: auto;
+}
 
-      --card: 0 0% 100%;
-      --card-foreground: 0 0% 3.9%;
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 0 0% 3.9%;
+body {
+  font-family: "Vazirmatn", sans-serif;
+}
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
 
-      --primary: 0 0% 9%;
-      --primary-foreground: 0 0% 98%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
 
-      --secondary: 0 0% 96.1%;
-      --secondary-foreground: 0 0% 9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
 
-      --muted: 0 0% 96.1%;
-      --muted-foreground: 0 0% 45.1%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
 
-      --accent: 0 0% 96.1%;
-      --accent-foreground: 0 0% 9%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 0 0% 98%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
 
-      --border: 0 0% 89.8%;
-      --input: 0 0% 89.8%;
-      --ring: 0 0% 3.9%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
 
-      --radius: 0.5rem;
-    }
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
 
-    .dark {
-      --background: 0 0% 3.9%;
-      --foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
 
-      --card: 0 0% 3.9%;
-      --card-foreground: 0 0% 98%;
-
-      --popover: 0 0% 3.9%;
-      --popover-foreground: 0 0% 98%;
-
-      --primary: 0 0% 98%;
-      --primary-foreground: 0 0% 9%;
-
-      --secondary: 0 0% 14.9%;
-      --secondary-foreground: 0 0% 98%;
-
-      --muted: 0 0% 14.9%;
-      --muted-foreground: 0 0% 63.9%;
-
-      --accent: 0 0% 14.9%;
-      --accent-foreground: 0 0% 98%;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 0 0% 98%;
-
-      --border: 0 0% 14.9%;
-      --input: 0 0% 14.9%;
-      --ring: 0 0% 83.1%;
-    }
+    --radius: 0.5rem;
   }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
   }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+
+.button {
+  position: relative;
+}
+.button__content {
+  position: relative;
+  background-color: hsl(260, 16%, 8%);
+  padding: 1rem 2.5rem;
+  border-radius: 4rem;
+  font-weight: 600;
+  overflow: hidden;
+  box-shadow: 0px 0px 30px #1d1d1d;
+}
+.button__text {
+  position: relative;
+  z-index: 10;
+}
+.button__content div {
+  width: 184px;
+  height: 64px;
+  border-radius: 50%;
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  filter: blur(12px);
+}
+.button__shape-1 {
+  background-color:  hsl(249, 54%, 12%);
+  transform: translate(-48px, -16px);
+  animation: shape-1 5s 1s ease-out infinite;
+}
+.button__shape-2 {
+  background-color: hsl(238, 34%, 45%);
+  transform: translate(-12px, 16px);
+  animation: shape-2 4s ease-in infinite;
+}
+.button__shape-3 {
+  background-color: hsl(240, 64%, 81%);
+  transform: translate(20px, -16px);
+  animation: shape-3 4s ease-out infinite;
+}
+.button__shape-4 {
+  background-color: hsl(231, 17%, 24%);
+  transform: translate(48px, 16px);
+  animation: shape-4 5s 1s ease-in infinite;
+}
+
+
+@keyframes shape-1 {
+  33% {
+    transform: translate(-28px, 0);
+  }
+}
+@keyframes shape-2 {
+  33% {
+    transform: translate(-28px, 28px);
+  }
+}
+@keyframes shape-3 {
+  33% {
+    transform: translate(20px, 4px);
+  }
+}
+@keyframes shape-4 {
+  33% {
+    transform: translate(48px, 0);
+  }
+}
+
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
 
 
