--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Jomhuria&family=Mirza:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Jomhuria&family=Mirza:wght@400;500;600;700&family=Noto+Kufi+Arabic:wght@100..900&family=Noto+Sans+Arabic:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jomhuria&family=Mirza:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Jomhuria&family=Mirza:wght@400;500;600;700&family=Noto+Kufi+Arabic:wght@100..900&family=Noto+Sans+Arabic:wght@100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.text-gradient {
-  background: linear-gradient(90deg, rgb(186, 185, 185), #747373 , #7d7d7d , #606060 , #ffffff , #787878 , #878787 , #808080 , rgb(136, 136, 136));
-  background-size: 200% 100%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradient-animation 15s linear infinite;
-  font-family: "IBM Plex Sans Arabic", sans-serif;
-  font-optical-sizing: auto;
-}
-
-
 body {
-  font-family: "Vazirmatn", sans-serif;
+  font-family: "IBM Plex Sans Arabic", sans-serif;
 }
 @layer base {
   :root {
@@ -93,14 +82,15 @@ body {
   }
 }
 
-
 .button {
   position: relative;
 }
 .button__content {
+  height: 75px;
   position: relative;
   background-color: hsl(260, 16%, 8%);
-  padding: 1rem 2.5rem;
+  padding: 0.3rem 115px;
+  margin-right: -25px;
   border-radius: 4rem;
   font-weight: 600;
   overflow: hidden;
@@ -108,11 +98,12 @@ body {
 }
 .button__text {
   position: relative;
+  font-size: 20px;
   z-index: 10;
 }
 .button__content div {
   width: 184px;
-  height: 64px;
+  height: 44px;
   border-radius: 50%;
   position: absolute;
   inset: 0;
@@ -120,7 +111,7 @@ body {
   filter: blur(12px);
 }
 .button__shape-1 {
-  background-color:  hsl(249, 54%, 12%);
+  background-color: hsl(249, 36%, 30%);
   transform: translate(-48px, -16px);
   animation: shape-1 5s 1s ease-out infinite;
 }
@@ -130,16 +121,15 @@ body {
   animation: shape-2 4s ease-in infinite;
 }
 .button__shape-3 {
-  background-color: hsl(240, 64%, 81%);
+  background-color: hsl(240, 54%, 12%);
   transform: translate(20px, -16px);
   animation: shape-3 4s ease-out infinite;
 }
 .button__shape-4 {
-  background-color: hsl(231, 17%, 24%);
+  background-color: hsl(231, 37%, 35%);
   transform: translate(48px, 16px);
   animation: shape-4 5s 1s ease-in infinite;
 }
-
 
 @keyframes shape-1 {
   33% {
@@ -162,7 +152,6 @@ body {
   }
 }
 
-
 @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
@@ -172,4 +161,28 @@ body {
   }
 }
 
+.text-gradient {
+  background: linear-gradient(
+    90deg,
+    rgb(186, 185, 185),
+    #747373,
+    #7d7d7d,
+    #606060,
+    #ffffff,
+    #787878,
+    #878787,
+    #808080,
+    rgb(136, 136, 136)
+  );
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient-animation 10s  linear infinite;
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+  font-optical-sizing: auto;
+}
 
+.bboard {
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+  color: hsl(240, 54%, 12%);
+}
