--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -193,3 +193,58 @@ section {
   margin: 50px auto;
   padding: 20px 10px;
 }
+
+
+@keyframes fadeInUp {
+  0% {
+    display: none;
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  25% {
+    display:  block;
+    opacity: 0.25;
+    transform: translateY(-15px);
+  }
+  50% {
+    display: block;
+    opacity: 0.5;
+    transform: translateY(-10px);
+  }
+  75%{
+    display: block;
+    opacity: 0.75;
+    transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.button-animation {
+  animation: fadeInUp 0.9s ease-out 0.68s  forwards;
+}
+.button-animation2 {
+  animation: fadeInUp 0.9s ease-out 0.6s  forwards;
+}
+
+.text-animation {
+  animation: fadeInUp 0.9s ease-out 0.4s forwards;
+}
+.text-animation2 {
+  animation: fadeInUp 0.9s ease-out 0.6s forwards;
+  
+}
+
+.text-animation.delay-1 {
+  animation-delay: 0.5s;
+}
+
+.div-animation {
+  animation: fadeInUp 0.6s ease-out 0.6s forwards;
+}
+
+.div-animation.delay-2 {
+  animation-delay: 0.6s;
+}
